--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,79 +1,49 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,300;0,400;0,500;0,600;0,800;0,900;1,400;1,500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Alegreya:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500;1,600;1,700&display=swap');
+
+
 :root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
-    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
-    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
+  --clr-background: #fff;
+  --clr-background-light: #e8eaed;
+  --clr-border: #bbb;
+  --clr-font: #202124;
+  --clr-font-light: #282828;
+  --clr-font-light-secondary: #5f6368;
+  --clr-select-accent: #b7c7fe;
+  --clr-caution: #feeeef;
 
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  --clr-white: #fff;
+  --clr-black: #171717;
+  --clr-red: #a9252b;
 
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
+  --clr-accent: #1468C8;
+  --clr-accent-secondary: #8ab4f8;
+  --clr-logo: #00589B;
 
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
+  --clr-btn-hover: rgba(138, 180, 248, .04);
 
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
+  --font-serif: 'Alegreya', serif;
+
+  --excerpt-width: 450px;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
-
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
-
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
-  }
+.dark-theme {
+  --clr-background: rgb(13, 17, 23);
+  --clr-background-light: rgb(22, 27, 34);
+  /* --clr-background: #202124; */
+  /* --clr-background-light: #3c4043; */
+  --clr-border: #5f6368;
+  --clr-font: #fff;
+  --clr-font-light: #e8eaed;
+  --clr-font-light-secondary: #9aa0a6;
+  --clr-select-accent: #3f465d;
+  --clr-caution: #5e1e1e;
 }
 
-* {
+
+*,
+*::after,
+*::before {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
@@ -82,17 +52,15 @@
 html,
 body {
   max-width: 100vw;
-  overflow-x: hidden;
+  min-height: 100vh;
+  scroll-behavior: smooth;
 }
 
 body {
-  color: rbg(--foreground-rgb);
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  color: var(--clr-font);
+  background: var(--clr-background);
+  font-family: 'Noto Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  transition: background-color .2s ease-out;
 }
 
 a {
@@ -100,8 +68,240 @@ a {
   text-decoration: none;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
+ul,
+li {
+  list-style: none;
+}
+
+input,
+textarea,
+button {
+  font-family: inherit;
+  background: none;
+  outline: none;
+  border: 0;
+  color: inherit;
+}
+
+.p-relative {
+  position: relative;
+}
+
+.font-serif {
+  font-family: var(--font-serif);
+}
+
+.container,
+.container-md {
+  width: min(100%, 1100px);
+  margin: 0 auto;
+}
+
+.container-md {
+  width: min(100%, 900px);
+}
+
+.main-title {
+  font-size: 3rem;
+}
+
+.icon {
+  display: inline-block;
+  color: var(--clr-font-light-secondary);
+}
+
+.btn {
+  display: inline-block;
+  border: 1px solid var(--clr-border);
+  border-radius: 4px;
+  padding: .5rem 1rem;
+  cursor: pointer;
+  font-weight: 600;
+}
+
+.btn-primary {
+  background-color: var(--clr-accent);
+  color: var(--clr-white);
+}
+
+.btn:not(:disabled):focus,
+.btn:not(:disabled):hover {
+  opacity: .9;
+}
+
+.theme {
+  position: relative;
+  display: flex;
+  align-items: center;
+  font-size: .8rem;
+  border: 1px solid var(--clr-border);
+  padding: .25rem .5rem;
+  border-radius: 4px;
+  margin: 0 .5rem;
+  cursor: pointer;
+}
+
+.theme:focus,
+.theme:hover {
+  border-color: var(--clr-accent-secondary);
+}
+
+.theme .icon {
+  display: flex;
+  align-items: center;
+  font-size: 1rem;
+  margin-right: .25rem;
+}
+
+.list {
+  min-width: max-content;
+  display: none;
+  flex-direction: column;
+  padding: .35rem .2rem;
+  background-color: var(--clr-background);
+  border: 1px solid var(--clr-border);
+  position: absolute;
+  top: calc(100% + .25rem);
+  left: 0;
+  border-radius: 4px;
+}
+
+.list.show {
+  display: flex;
+}
+
+.list-item {
+  display: flex;
+  padding: .35rem .75rem;
+  padding-right: 1.5rem;
+  align-items: center;
+  z-index: 10;
+  border-radius: 2px;
+}
+
+.list-item:hover {
+  background-color: var(--clr-select-accent);
+}
+
+.list-item svg {
+  margin-right: .75rem;
+}
+
+/* Spinner / Btn Spinner */
+
+.loadingSpinner {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  z-index: 5000;
+  width: 32px;
+  height: 32px;
+  border: 3px solid;
+  border-color: var(--clr-accent-secondary) var(--clr-accent-secondary) var(--clr-background-light) var(--clr-background-light);
+  border-radius: 50%;
+  animation: spin 1.2s linear infinite;
+}
+
+.p-relative .loadingSpinner {
+  width: 20px;
+  height: 20px;
+  top: 30%;
+}
+
+.n-left .loadingSpinner {
+  left: 5%;
+}
+
+/* TIPS */
+.tip {
+  padding: 1rem;
+  border: 1px solid var(--clr-select-accent);
+  background-color: var(--clr-btn-hover);
+  display: grid;
+  grid-template-columns: 40px 1fr;
+  align-items: flex-start;
+  gap: 2rem;
+  border-radius: 8px;
+  margin-inline: 2rem;
+}
+
+.caution {
+  background-color: var(--clr-caution);
+}
+
+.tip p {
+  font-size: .8rem;
+  font-weight: 400;
+  color: var(--clr-font-light);
+}
+
+.caution p {
+  color: var(--clr-red);
+}
+
+.dark-theme .caution p {
+  color: var(--clr-white);
+}
+
+.tip p a,
+.caution p span {
+  color: var(--clr-accent);
+  padding-left: .5rem;
+  cursor: pointer;
+}
+
+.tip .icon {
+  width: 20px;
+  height: 20px;
+  color: var(--clr-logo);
+}
+
+.caution .icon {
+  color: var(--clr-red);
+}
+
+.dark-theme .caution .icon {
+  color: var(--clr-white);
+
+}
+
+/* @media (prefers-color-scheme: dark) {
+  :root {
+    --clr-background: #202124;
+    --clr-background-light: #282828;
+    --clr-border: #5f6368;
+    --clr-font: #fff;
+    --clr-font-light: #e8eaed;
+    --clr-font-light-secondary: #9aa0a6;
+    --clr-select-accent: #3f465d;
+  }
+} */
+
+@media (max-width: 768px) {
+  .tip {
+    margin-inline: 1.5rem;
+    grid-template-columns: 25px 1fr;
+
+  }
+
+  .tip.inside {
+    margin: 0;
+  }
+}
+
+@media (max-width: 500px) {
+  .tip {
+    grid-template-columns: 1fr;
+    gap: 1rem;
+  }
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
   }
 }
