--- a/styles/Search.module.css
+++ b/styles/Search.module.css
@@ -8,7 +8,7 @@
 }
 
 .search-container {
-    padding: 2rem;
+    padding: 2rem 0;
     align-items: center;
     justify-content: center;
     display: flex;
@@ -85,6 +85,7 @@
     }
 
     .input-box input {
+        width: 100%;
         margin: 0;
     }
 
