--- a/styles/Feed.module.css
+++ b/styles/Feed.module.css
@@ -73,6 +73,12 @@
     height: 100%;
 }
 
+.result-p {
+    font-size: .8rem;
+    color: var(--clr-font-light);
+    text-align: center;
+}
+
 @media (max-width: 768px) {
     .flex-btns {
         --btn-width: 150px;
