--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -153,7 +153,7 @@
 }
 
 .menu-links p {
-    font-size: 1.5rem;
+    font-size: 2.2rem;
     font-weight: 300;
     color: var(--clr-font-light-secondary);
     padding-bottom: 1rem;
@@ -196,6 +196,10 @@
 
 .menu-links .link.active::after {
     width: 70%;
+}
+
+.menu-links .link {
+    font-size: 1.5rem;
 }
 
 .btn,
