--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,7 +5,7 @@
 :root {
   --clr-background: #fff;
   --clr-background-light: #e4e2e0;
-  --clr-border: #aaa;
+  --clr-border: #bbb;
   --clr-font: #202124;
   --clr-font-light: #282828;
   --clr-font-light-secondary: #5f6368;
