--- a/styles/Profile.module.css
+++ b/styles/Profile.module.css
@@ -1,6 +1,5 @@
 .profile {
     padding: 3rem 0;
-    background-color: var(--clr-background-light);
 }
 
 .container {
@@ -18,6 +17,7 @@
     width: 100%;
     background-color: var(--clr-background);
     border-radius: 4px;
+    border: 1px solid var(--clr-background-light);
 }
 
 .title {
@@ -136,6 +136,7 @@
     padding: 1rem 4rem 2rem;
     background-color: var(--clr-background);
     border-radius: 4px;
+    border: 1px solid var(--clr-background-light);
 }
 
 .btn-profile {
@@ -202,12 +203,9 @@
 }
 
 @media (max-width: 768px) {
-    .profile {
-        background-color: var(--clr-background);
-    }
-
     .main {
         padding: 2rem;
+        border: 0;
     }
 
     .title {
@@ -222,6 +220,7 @@
 
     .portion {
         padding: 1rem 2rem 2rem;
+        border: 0;
     }
 
     .add-form__flex {
