--- a/styles/globals.css
+++ b/styles/globals.css
@@ -136,9 +136,9 @@ button {
   position: relative;
   display: flex;
   align-items: center;
-  font-size: .8rem;
+  font-size: .9rem;
   border: 1px solid var(--clr-border);
-  padding: .25rem .5rem;
+  padding: .35rem .5rem;
   border-radius: 4px;
   margin: 0 .5rem;
   cursor: pointer;
@@ -292,6 +292,12 @@ button {
 }
 
 @media (max-width: 500px) {
+
+  .theme {
+    font-size: 1rem;
+    padding: .5rem .65rem;
+  }
+
   .list-item {
     padding: .5rem 2rem .5rem 1rem;
   }
