--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,7 +5,7 @@
   --clr-background: #fff;
   --clr-background-light: #e4e2e0;
   --clr-border: #bbb;
-  --clr-font: #202124;
+  --clr-font: rgb(13, 17, 23);
   --clr-font-light: #282828;
   --clr-font-light-secondary: #5f6368;
   --clr-select-accent: #b7c7fe;
