--- a/styles/Profile.module.css
+++ b/styles/Profile.module.css
@@ -202,6 +202,114 @@
     font-size: 1.1rem;
 }
 
+/* Resume Modal */
+.resume {
+    position: fixed;
+    width: 100%;
+    min-width: 300px;
+    max-width: 450px;
+    height: auto;
+    background-color: var(--clr-background);
+    border-radius: 8px;
+    z-index: 100;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    border: 1px solid var(--clr-border);
+    padding: 1.5rem;
+}
+
+.resume-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.resume-header .icon {
+    box-sizing: content-box;
+    padding: .5rem;
+    border-radius: 50%;
+    border: 1px solid transparent;
+    margin-right: 0;
+    margin-left: 1rem;
+    cursor: pointer;
+}
+
+.resume-header .icon:hover {
+    border-color: var(--clr-background-light);
+}
+
+.resume-input-box {
+    width: 100%;
+    height: 100px;
+    border: 1px dashed var(--clr-border);
+    border-radius: 4px;
+    margin: .5rem 0 .25rem;
+}
+
+.resume-input-box input {
+    display: none;
+}
+
+.resume-input-box label {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+}
+
+.resume-input-box label span {
+    font-size: .8rem;
+    padding-top: .5rem;
+    color: var(--clr-accent);
+}
+
+.pdf-icon {
+    font-size: 2.5rem;
+}
+
+.progress {
+    background-color: var(--clr-background-light);
+    border-radius: 4px;
+    margin: .5rem 0 .25rem;
+    width: 100%;
+    height: 80px;
+    padding: 1rem;
+}
+
+.progress p {
+    font-size: .7rem;
+}
+
+.progress-details {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 100%;
+}
+
+.progess-bar {
+    width: 100%;
+    flex-grow: 1;
+    height: 4px;
+    background-color: red;
+    border-radius: 100vw;
+}
+
+.progress-buttons {
+    display: flex;
+    gap: .5rem;
+    padding-left: 1rem;
+}
+
+.progress-buttons svg {
+    font-size: 1.5rem;
+    cursor: pointer;
+    stroke-width: 1px;
+}
+
 @media (max-width: 768px) {
     .main {
         padding: 2rem;
@@ -225,5 +333,11 @@
 
     .add-form__flex {
         grid-template-columns: 1fr;
+    }
+}
+
+@media (max-width: 768px) {
+    .resume {
+        border: none;
     }
 }
