--- a/styles/Profile.module.css
+++ b/styles/Profile.module.css
@@ -403,16 +403,10 @@
 
     .portion {
         padding: 1rem 2rem 2rem;
-        border: 0;
+        border-radius: 2px;
     }
 
     .add-form__flex {
         grid-template-columns: 1fr;
-    }
-}
-
-@media (max-width: 768px) {
-    .resume {
-        border-color: var(--clr-background-light);
     }
 }
