--- a/styles/Skeleton.module.css
+++ b/styles/Skeleton.module.css
@@ -1,4 +1,5 @@
-.job {
+.job,
+.tuttor {
     padding: 1.5rem;
     border: 1px solid var(--clr-border);
     max-width: var(--excerpt-width);
@@ -25,7 +26,8 @@
 .posted,
 .desc,
 .my-job h2,
-.btn {
+.btn,
+.tuttor h1 {
     background-color: var(--clr-background-light);
     border-radius: 4px;
     animation: dim .5s ease-out alternate infinite;
@@ -33,9 +35,14 @@
 
 
 .job h1,
-.my-job h2 {
+.my-job h2,
+.tuttor h1 {
     width: 80%;
     height: 30px;
+}
+
+.tuttor h1 {
+    width: 40%;
 }
 
 .text,
@@ -77,6 +84,10 @@
     padding-bottom: 1rem;
 }
 
+.header-flex {
+    justify-content: space-between;
+}
+
 .icon {
     font-size: 1rem;
     color: var(--clr-font-light-secondary);
@@ -88,6 +99,10 @@
     margin-bottom: 1rem;
 }
 
+.tuttor .price-tag {
+    margin: 0;
+    width: 20%;
+}
 
 .requirements {
     display: flex;
@@ -123,6 +138,13 @@
     margin-bottom: 1rem;
     border-bottom: 1px solid var(--clr-background-light);
 }
+
+.tuttor .descs {
+    border: 0;
+    margin-bottom: 0;
+    padding: 0;
+}
+
 
 .desc {
     width: 100%;
