--- a/styles/Tutor.module.css
+++ b/styles/Tutor.module.css
@@ -4,7 +4,7 @@
 
 .tutor-grid {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     gap: 1rem;
 }
 
