--- a/styles/Job.module.css
+++ b/styles/Job.module.css
@@ -64,15 +64,22 @@
     padding: .5rem 1.5rem;
 }
 
-.save-icon {
+.save-icon,
+.resume-icon {
     font-size: 1.5rem;
     padding: .5rem;
     box-sizing: content-box;
     border-radius: 4px;
     cursor: pointer;
+    color: var(--clr-font-light);
 }
 
-.save-icon:hover {
+.resume-icon {
+    padding: 0.25rem;
+}
+
+.save-icon:hover,
+.resume-icon:hover {
     color: var(--clr-border);
     fill: var(--clr-border);
     background-color: var(--clr-background-light);
@@ -143,6 +150,12 @@
     border-radius: 4px;
     align-self: flex-start;
     font-size: 1rem;
+}
+
+.edu-tag {
+    margin-bottom: .5rem;
+    background-color: rgba(22, 27, 34, 0.2);
+    font-size: .9rem;
 }
 
 .requirements {
