--- a/styles/Profile.module.css
+++ b/styles/Profile.module.css
@@ -86,6 +86,7 @@
     border-bottom: 1px solid var(--clr-background-light);
     border-radius: 3px;
     padding: 0 .25rem;
+    font-size: .9rem;
 }
 
 .price input,
