--- a/styles/Job.module.css
+++ b/styles/Job.module.css
@@ -394,7 +394,7 @@
     justify-content: center;
     align-items: center;
     border-radius: 50%;
-    border: 1px solid var(--clr-background-light);
+    border: 1px solid var(--clr-border);
 }
 
 /* requirement */
