--- a/styles/Job.module.css
+++ b/styles/Job.module.css
@@ -18,6 +18,7 @@
 
 .job-details h1 {
     font-size: 1.75rem;
+    line-height: 1;
 }
 
 .job-details__header {
@@ -115,6 +116,7 @@
 
 .job h1 {
     font-size: 1.75rem;
+    line-height: 1;
 }
 
 .location,
@@ -537,6 +539,7 @@
 
 .view-job h1 {
     font-size: 2.5rem;
+    line-height: 1;
 }
 
 .view-job p {
