--- a/styles/globals.css
+++ b/styles/globals.css
@@ -211,7 +211,7 @@ button {
   width: 32px;
   height: 32px;
   border: 3px solid;
-  border-color: var(--clr-accent-secondary) var(--clr-accent-secondary) var(--clr-background-light) var(--clr-background-light);
+  border-color: var(--clr-accent-secondary) var(--clr-background-light) var(--clr-background-light) var(--clr-background-light);
   border-radius: 50%;
   animation: spin 1.2s linear infinite;
 }
@@ -288,7 +288,7 @@ button {
 .job-status {
   display: inline-block;
   font-size: .8rem;
-  padding: .35rem .5rem;
+  padding: .45rem .5rem;
   align-self: flex-start;
   border-radius: 4px;
   margin: 0 .5rem;
