--- a/styles/Feed.module.css
+++ b/styles/Feed.module.css
@@ -42,7 +42,7 @@
     flex-direction: column;
     align-items: center;
     width: 100%;
-    padding: 1rem;
+    padding: 3rem 1rem;
 }
 
 .job-feed {
