--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -1,7 +1,11 @@
-.header {
+.header,
+.footer {
     width: 100%;
-    height: min(11vh, 110px);
     padding: 0 2rem;
+}
+
+.header {
+    height: min(11vh, 110px);
     border-bottom: 1px solid var(--clr-background-light);
 }
 
@@ -224,8 +228,63 @@
     margin-inline: 0;
 }
 
+/* Footer */
+.footer {
+    margin-top: 3rem;
+    min-height: min(11vh, 110px);
+    border-top: 1px solid var(--clr-background-light);
+    display: flex;
+    align-items: center;
+}
+
+.footer-container {
+    padding: 1rem 0;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    width: 100%;
+}
+
+.footer .logo {
+    color: var(--clr-font);
+}
+
+.footer .logo a {
+    font-size: 1.5rem;
+}
+
+.footer .logo p {
+    font-size: .75rem;
+    color: var(--clr-font);
+    font-weight: 400;
+}
+
+.footer-links {
+    display: flex;
+    column-gap: 1rem;
+    flex-wrap: wrap;
+    padding: 1rem 0 .5rem;
+}
+
+.footer-links li {
+    margin: .25rem;
+}
+
+.footer-links li a {
+    font-size: .9rem;
+    font-weight: 300;
+    padding: .25rem 0;
+}
+
+.footer-links li a:hover,
+.footer-links li a:focus {
+    text-decoration: underline;
+}
+
 @media (max-width: 500px) {
-    .header {
+
+    .header,
+    .footer {
         padding: 0 1.5rem;
     }
 }
