--- a/styles/Auth.module.css
+++ b/styles/Auth.module.css
@@ -1,7 +1,7 @@
 .container {
     max-width: 450px;
     margin: 0 auto;
-    min-height: 100vh;
+    min-height: calc(100vh - var(--header-height));
     display: flex;
     flex-direction: column;
     justify-content: center;
