--- a/styles/Job.module.css
+++ b/styles/Job.module.css
@@ -19,6 +19,7 @@
 .job-details h1 {
     font-size: 1.75rem;
     line-height: 1;
+    text-transform: capitalize;
 }
 
 .job-details__header {
@@ -117,6 +118,7 @@
 .job h1 {
     font-size: 1.75rem;
     line-height: 1;
+    text-transform: capitalize;
 }
 
 .location,
@@ -524,6 +526,7 @@
 
 .my-job h2 {
     font-size: 1.75rem;
+    text-transform: capitalize;
 }
 
 /* View Single Job */
@@ -553,6 +556,7 @@
 .view-job h1 {
     font-size: 2.5rem;
     line-height: 1;
+    text-transform: capitalize;
 }
 
 .view-job p {
