--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -185,6 +185,7 @@
     margin-bottom: .5rem;
 }
 
+
 .menu-close-icon {
     font-size: 1.2rem;
     border: 1px solid transparent;
@@ -222,6 +223,7 @@
 .msg-icon,
 .mobile-msg-icon {
     font-size: 1.2rem;
+    cursor: pointer;
 }
 
 .mobile-msg-icon {
