--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -6,7 +6,7 @@
 
 .header {
     height: var(--header-height);
-    border-bottom: 1px solid var(--clr-background-light);
+    border-bottom: 1px solid var(--clr-border-light);
 }
 
 .nav {
@@ -97,7 +97,7 @@
     position: absolute;
     top: calc(100% + .5rem);
     right: 0;
-    border: 1px solid var(--clr-border);
+    border: 1px solid var(--clr-border-light);
     border-radius: 4px;
     background-color: var(--clr-background);
     min-width: 200px;
@@ -117,7 +117,7 @@
 
 .ul-header {
     position: relative;
-    border-bottom: 1px solid var(--clr-border);
+    border-bottom: 1px solid var(--clr-border-light);
     padding: .85rem;
     font-size: .6rem;
 }
@@ -234,7 +234,7 @@
 .footer {
     margin-top: 3rem;
     min-height: var(--header-height);
-    border-top: 1px solid var(--clr-background-light);
+    border-top: 1px solid var(--clr-border-light);
     display: flex;
     align-items: center;
 }
