Minor style change

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -13,7 +13,7 @@
   --clr-font-light: #e8eaed;
   --clr-font-light-secondary: #9aa0a6;
   --clr-select-accent: #3f465d;
-  --clr-caution: #f39797;
+  --clr-caution: #f1b1b1;
 
   --clr-white: #fff;
   --clr-black: #171717;
