--- a/styles/Job.module.css
+++ b/styles/Job.module.css
@@ -278,10 +278,6 @@
     display: flex;
     flex-direction: column;
     gap: .25rem;
-    box-shadow: 0px 3px 2px -2px var(--clr-accent);
-    border-radius: 8px;
-    padding: 1rem 0 2rem;
-    margin-bottom: 1rem;
 }
 
 .create-job__input-box-flex {
@@ -329,6 +325,13 @@
     font-size: 1rem;
 }
 
+.create-job__input-box.border input {
+    height: 45px;
+    margin-top: .5rem;
+    padding: 0 .5rem 0 1rem;
+    border: 1px solid var(--clr-border);
+}
+
 .create-job__input-box textarea,
 .create-job__input-box-lg textarea {
     min-height: 150px;
@@ -346,19 +349,25 @@
     margin-top: 1rem;
 }
 
-.max-chars {
+.max-chars,
+.max-chars-sm {
     position: absolute;
     right: 1rem;
     bottom: 3rem;
     font-size: .8rem;
 }
 
-.max-chars span {
+.max-chars-sm {
+    bottom: 1rem;
+}
+
+.max-chars span,
+.max-chars-sm span {
     color: var(--clr-accent);
 }
 
 .create-job__input-box input:focus,
-.create-job__input-box textarea:focus {
+.text-box-border textarea:focus {
     border-color: var(--clr-select-accent);
 }
 
