--- a/styles/Profile.module.css
+++ b/styles/Profile.module.css
@@ -51,10 +51,7 @@
     display: flex;
     flex-direction: column;
     gap: .25rem;
-    box-shadow: 0px 3px 2px -2px var(--clr-accent);
     border-radius: 8px;
-    padding: 1rem 1rem 2rem;
-    margin-bottom: 1rem;
 }
 
 .input-box-flex {
@@ -83,10 +80,16 @@
 .input-box-flex input {
     width: 100%;
     height: 45px;
-    border-bottom: 1px solid var(--clr-background-light);
-    border-radius: 3px;
+    border-bottom: 1px solid var(--clr-border-light);
+    border-radius: 4px;
     padding: 0 .25rem;
     font-size: .9rem;
+}
+
+.input-box.border input,
+.input-box-flex.border input {
+    padding: 0 .5rem 0 1rem;
+    border: 1px solid var(--clr-border);
 }
 
 .price input,
@@ -101,9 +104,10 @@
 }
 
 .textarea-box textarea {
-    padding: 1rem .25rem;
+    padding: 1rem;
     min-height: 150px;
     resize: vertical;
+    border: 1px solid var(--clr-border);
 }
 
 .buttons-flex {
